--- a/src/index.scss
+++ b/src/index.scss
@@ -70,3 +70,48 @@ code {
     transform: translateX(-200px);
   }
 }
+
+.list-counter-square {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.list-counter-square>li {
+  position: relative;
+  display: block;
+  margin-bottom: .25rem;
+  padding: .325rem .825rem .325rem 1.325rem;
+  color: #fff;
+   border-bottom: 2px solid #eee;
+}
+.list-counter-square>li:last-child {
+  margin-bottom: 0;
+}
+.list-counter-square>li::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  width: 0.5rem;
+  
+  
+}  
+.page-header {
+  margin: 40px 0 20px;
+  border-bottom: 2px solid #eee;
+  font-size: 25px;
+}
+
+.btn-icon {
+    padding-top: 0;
+    padding-bottom: 0;
+}        
+.btn > .icon {
+    position: relative;
+    left: -.75rem;
+    display: inline-block;
+    padding: .375rem .75rem;
+    background: rgba(0, 0, 0, 0.15);
+    border-radius: .25rem 0 0 .25rem;
+}
